--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-psycopg2==2.8.3
-psycopg2-binary==2.8.3
+psycopg2
+psycopg2-binary
 pycodestyle==2.5.0
 SQLAlchemy==1.3.7
 Werkzeug==0.15.5
+mysqlclient
+pymysql
